--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  bloc: ^9.0.1
+  get_it: ^8.2.0
+  go_router: ^16.1.0
 
 dev_dependencies:
   flutter_test:
