--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,14 +9,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  bloc: ^9.0.1
   get_it: ^8.2.0
   go_router: ^16.1.0
+  flutter_bloc: ^9.1.1
+  dio: ^5.9.0
+  dartz: ^0.10.1
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  build_runner: ^2.4.13
+  json_serializable: ^6.9.2
 
 flutter:
   uses-material-design: true
