--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   dio: ^5.9.0
   dartz: ^0.10.1
   json_annotation: ^4.9.0
+  equatable: ^2.0.5
   logger: ^2.4.0
 
 dev_dependencies:
